--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/env": "^16.0.3",
     "@tailwindcss/forms": "^0.5.10",
     "firebase": "^12.6.0",
     "next": "16.0.3",
@@ -25,6 +26,6 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
