--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
+    "framer-motion": "^12.23.26",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
