--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@next/env": "^16.0.8",
-    "@tailwindcss/forms": "^0.5.10",
-    "dotenv": "^17.2.3",
-    "firebase": "^12.6.0",
-    "framer-motion": "^12.23.26",
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
-  },
-  "devDependencies": {
-    "@playwright/test": "^1.57.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19.2.1",
-    "@types/react-dom": "^19.2.1",
-    "babel-plugin-react-compiler": "1.0.0",
-    "baseline-browser-mapping": "^2.9.7",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.8",
-    "tailwindcss": "^4",
-    "typescript": "5.9.3"
-  }
+  "next": "^16.0.10",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0",
+  "firebase": "^12.6.0",
+  "framer-motion": "^12.23.26",
+  "@tailwindcss/forms": "^0.5.10",
+  "dotenv": "^17.2.3",
+  "react-icons": "^5.5.0"
+},
+"devDependencies": {
+  "eslint-config-next": "^16.0.10",
+  "@playwright/test": "^1.57.0",
+  "@tailwindcss/postcss": "^4",
+  "@types/node": "^20",
+  "@types/react": "^18.2.0",
+  "@types/react-dom": "^18.2.0",
+  "babel-plugin-react-compiler": "1.0.0",
+  "baseline-browser-mapping": "^2.9.7",
+  "eslint": "^9",
+  "tailwindcss": "^4",
+  "typescript": "5.9.3"
+}
+
 }
